Bug 170477 - A specific document hangs after fix to bug 170381
Summary: A specific document hangs after fix to bug 170381
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.8.0 target:26.2.1 target:26...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2026-01-26 05:36 UTC by Mike Kaganski
Modified: 2026-02-20 11:09 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2026-01-26 05:36:19 UTC
Open attachment 125030 [details] from bug 99822.
After commit fb203eb57a1ba0accf1894672d35ddf9430d8b05 (for bug 170381), it hangs.
Comment 1 Mike Kaganski 2026-01-26 05:56:30 UTC
https://gerrit.libreoffice.org/c/core/+/198116
Comment 2 Commit Notification 2026-01-26 09:26:49 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a5832581691c3532f24d754ed0488e7df43d82c0

tdf#170477: detect MoveFwd oscillation in SwTabFrame::MakeAll

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-26 15:31:05 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/26aa5db06221ab940c65ecc27a2a52bf1ea0eb42

tdf#170477 follow-up: reimplement the fix by cleaning up code

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-01-29 09:19:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/c2c33dbdbc686e7c0eb349efdd15a8c97d8f00a7

tdf#170477: detect MoveFwd oscillation in SwTabFrame::MakeAll

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-02-20 11:09:56 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/6aec3c203e936bad60f565a73a365dfab573aa5b

tdf#170477 follow-up: reimplement the fix by cleaning up code

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.