tdf#170477: detect MoveFwd oscillation in SwTabFrame::MakeAll

In the specific bug document, some constellation of factors created
the case where the last inner floating table tries to move forward,
in the process creates a split fly on the same page (subject to move
forward later, when outer table formats), moves to it (leaving the
old fly empty), which recreates the same layout as before; and that
oscillated infinitely.

The fix implemented here is to detect when MoveFwd call created the
described situation, and then use SwLayouter::InsertMovedFwdFrame
to break the oscillation.

I was not able to reproduce this problem anew; test document was
simplified from the original, with the aim to minimize instability
(but still, the resulting layout in Writer differs from Word's,
which makes the test likely to stop testing the intended code path
in the future - sigh).

Change-Id: Iaa796a169cb9f97d5a6b3dd7ebf1cf5b726ca568
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198116
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198139
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit bcf6c52cff15147d25ef68df02ac81a0020285cd)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198423
Tested-by: Miklos Vajna <vmiklos@collabora.com>